tests/snapshots/examples_fixtures/hint_demos__invalid_lambda.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 21
---
Fixture: examples/hint_demos/invalid_lambda.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `->` after lambda parameters, found `*`.

  --> examples/hint_demos/invalid_lambda.flx:5:17
  |
5 | let double = /x * 2;
  |                 ^

Hint:
  Use `/x -> expr` or `/(x, y) -> expr`.
== stdout ==
<not executed>
